--- a/eShop.App/Views/User/Login.cshtml
+++ b/eShop.App/Views/User/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using eShop.App.ViewModels; 
-@model LoginViewModel;
+﻿@model LoginViewModel;
 
 @{ 
     ViewData["Title"] = "Log in to your account";
