--- a/eShop.App/Views/User/Register.cshtml
+++ b/eShop.App/Views/User/Register.cshtml
@@ -1,5 +1,4 @@
-﻿@using eShop.App.ViewModels;
-@model RegisterViewModel;
+﻿@model RegisterViewModel;
 
 @{
     ViewData["Title"] = "Sign up for a new account";
