--- a/eShop.App/Views/_ViewImports.cshtml
+++ b/eShop.App/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using eShop.App
 @using eShop.App.Models
 @using eShop.App.ViewModels
+@using eShop.App.ViewModels.Product
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
