--- a/eShop.App/Views/_ViewImports.cshtml
+++ b/eShop.App/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using eShop.App
 @using eShop.App.Models
-@using eShop.App.ViewModels
+@using eShop.App.ViewModels.User
 @using eShop.App.ViewModels.Product
+@using eShop.App.ViewModels.Order
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
