add Identity partial page

--- a/eShop.App/Views/Shared/_Layout.cshtml
+++ b/eShop.App/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Home</a>
                         </li>
                     </ul>
+                    @await Html.PartialAsync("_Identity")
                 </div>
             </div>
         </nav>
