--- a/eShop.App/Views/User/Login.cshtml
+++ b/eShop.App/Views/User/Login.cshtml
@@ -19,22 +19,23 @@
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Login">
+                <form asp-controller="token" asp-action="Login">
+                @*<form asp-action="Login">*@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group">
                         <label asp-for="Username" class="control-label"></label>
-                        <input asp-for="Username" class="form-control" />
+                        <input asp-for="Username" class="form-control"/>
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
+                        <input asp-for="Password" class="form-control"/>
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-outline-success float-right" type="submit" value="Log in" />
+                        <input class="btn btn-outline-success float-right" type="submit" value="Log in"/>
                         <a class="btn btn-outline-secondary" asp-controller="Product" asp-action="Index">Cancel</a>
                     </div>
                 </form>
