--- a/eShop.App/Views/User/Login.cshtml
+++ b/eShop.App/Views/User/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LoginViewModel;
 
-@{ 
+@{
     ViewData["Title"] = "Log in to your account";
 }
 
@@ -10,7 +10,7 @@
             <h4>Log in to your account</h4>
         </p>
 
-        @if(TempData["Error"] != null)
+        @if (TempData["Error"] != null)
         {
             <div class="col-md-12 alert alert-danger">
                 <span><b>Sorry!</b> - @TempData["Error"] </span>
@@ -19,23 +19,22 @@
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-controller="token" asp-action="Login">
-                @*<form asp-action="Login">*@
+                <form id="loginForm" asp-action="Login">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group">
                         <label asp-for="Username" class="control-label"></label>
-                        <input asp-for="Username" class="form-control"/>
+                        <input asp-for="Username" class="form-control" />
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control"/>
+                        <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-outline-success float-right" type="submit" value="Log in"/>
+                        <input class="btn btn-outline-success float-right" onClick="login()" type="submit" value="Log in" />
                         <a class="btn btn-outline-secondary" asp-controller="Product" asp-action="Index">Cancel</a>
                     </div>
                 </form>
