--- a/eShop.App/Views/User/Login.cshtml
+++ b/eShop.App/Views/User/Login.cshtml
@@ -16,7 +16,7 @@
                 <span><b>Sorry!</b> - @TempData["Error"] </span>
             </div>
         }
-
+        
         <div class="row">
             <div class="col-md-8 offset-2">
                 <form id="loginForm" asp-action="Login">
@@ -34,7 +34,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-outline-success float-right" onClick="login()" type="submit" value="Log in" />
+                        <input class="btn btn-outline-success float-right" onclick="login()" type="submit" value="Log in" />
                         <a class="btn btn-outline-secondary" asp-controller="Product" asp-action="Index">Cancel</a>
                     </div>
                 </form>
