--- a/eShop.App/Views/Product/Index.cshtml
+++ b/eShop.App/Views/Product/Index.cshtml
@@ -28,7 +28,6 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                     @*       <p class="card-text">@item.Description</p>*@
                             <p class="card-text"><b>Price: </b>@item.Price $</p>
                             <p class="card-text">@item.Description</p>
                         </div>
@@ -54,4 +53,4 @@
     }
 </div>
 
-@*@await Html.PartialAsync("_CreateItem", "Movies") *@
+@*@await Html.PartialAsync("_CreateItem", "Product") *@
