--- a/eShop.App/Views/Product/Index.cshtml
+++ b/eShop.App/Views/Product/Index.cshtml
@@ -38,7 +38,7 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
- @*                               <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
+                                @*                               <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
                                asp-controller="Orders"
                                asp-action="AddItemToShoppingCart"
                                asp-route-id="@item.Id">
@@ -51,6 +51,6 @@
             </div>
         </div>
     }
+    @await Html.PartialAsync("_CreateItem", "Product")
 </div>
 
-@*@await Html.PartialAsync("_CreateItem", "Product")*@
