--- a/eShop.App/Views/Shared/_CreateItem.cshtml
+++ b/eShop.App/Views/Shared/_CreateItem.cshtml
@@ -2,9 +2,9 @@
 
 @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
 {
-    <div style="position: fixed; right: 25px; bottom: 25px;" class="text-white">
+    <div type="button">
         <a asp-controller="@Model" asp-action="Create" class="btn btn-success">
-            <i class="bi bi-plus-circle"></i> Add New
+            <i class="bi bi-plus-circle"></i> Add New @Model
         </a>
     </div>
 }
