--- a/eShop.App/Views/Product/Create.cshtml
+++ b/eShop.App/Views/Product/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <p>
-            <h4>Create a new movie</h4>
+            <h4>Create a new product</h4>
         </p>
 
         <div class="row">
