--- a/eShop.App/Views/Product/Create.cshtml
+++ b/eShop.App/Views/Product/Create.cshtml
@@ -22,9 +22,13 @@
                                 <input asp-for="Name" class="form-control" />
                                 <span asp-validation-for="Name" class="text-danger"></span>
                             </div>
+                            
+
+                            @*<td> @Html.Editor("Price", @String.Format("{0:N0}", 0.01))<td>*@
                             <div class="form-group">
                                 <label asp-for="Price" class="control-label"></label>
-                                <input asp-for="Price" type="number" class="form-control" />
+                                @*<input asp-for="Price" type="text" step="0,01" class="form-control" />*@
+                                <input id="price" asp-for="Price" type="number" step="0.01" class="form-control" />
                                 <span asp-validation-for="Price" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -40,12 +44,12 @@
                         </div>
                     </div>
 
-@*                    <div class="col-md-4 offset-4 text-center">
+                    @*                    <div class="col-md-4 offset-4 text-center">
                         <img width="100%" id="ImageUrlPreview" />
                     </div>*@
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-right" />
+                        <input type="submit" value="Create" onclick="replaceValue()" class="btn btn-outline-success float-right" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
                     </div>
 
@@ -57,11 +61,4 @@
     </div>
 </div>
 
-@*@section Scripts{
-    <script>
-        $("#ImageURL").on("change", function () {
-            var output = document.getElementById("ImageUrlPreview");
-            output.src = $(this).val();
-        })
-    </script>
-}*@
+<script src="~/js/inputNumberHelper.js" asp-append-version="true"></script>
