update product views

--- a/eShop.App/Views/Product/DeleteCompleted.cshtml
+++ b/eShop.App/Views/Product/DeleteCompleted.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="row">
     <div class="col-md-6 offset-3 alert alert-success text-center">
         <h2>This product was successfully deleted</h2>
+        <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
     </div>
 </div>
