--- a/eShop.App/Views/Product/Details.cshtml
+++ b/eShop.App/Views/Product/Details.cshtml
@@ -11,9 +11,19 @@
                 <div class="col-md-12">
                     <div class="card-header text-white bg-info">
                         <p class="card-text">
-                            <h5 class="card-title">
-                                @Model.Name
-                            </h5>
+                            <div style="display: flex; align-items: center; justify-content: space-between;">
+                                <h5 class="card-title">
+                                    @Model.Name
+                                </h5>
+                                <div style="display: flex;">
+                                    <a class="btn btn-outline-dark" asp-action="Edit" asp-route-id="@Model.Id"><i class="bi bi-pencil-square"></i>Edit</a>
+
+                                    <form asp-action="Delete" asp-route-id="@Model.Id" method="post">
+                                        <input type="hidden" name="delete" value="delete" />
+                                        <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
+                                    </form>
+                                </div>
+                            </div>
                         </p>
                     </div>
                 </div>
