--- a/eShop.App/Views/Product/Edit.cshtml
+++ b/eShop.App/Views/Product/Edit.cshtml
@@ -24,7 +24,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="Price" class="control-label"></label>
-                                <input asp-for="Price" type="number" step="0.01" class="form-control" />
+                                <input id="price" asp-for="Price" type="number" step="0.01" class="form-control" />
                                 <span asp-validation-for="Price" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -45,7 +45,7 @@
                     </div>*@
 
                     <div class="form-group">
-                        <input type="submit" value="Update" class="btn btn-outline-success float-right" />
+                        <input type="submit" value="Update" onclick="replaceValue()" class="btn btn-outline-success float-right" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
                     </div>
 
