Update GetAll View

--- a/eShop.App/Views/Product/Index.cshtml
+++ b/eShop.App/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProductViewModel>
 
 @{
-    ViewData["Title"] = "List of Movies";
+    ViewData["Title"] = "List of Products";
 }
 
 <div class="row">
@@ -60,4 +60,3 @@
     }
     @await Html.PartialAsync("_CreateItem", "Product")
 </div>
-
