--- a/eShop.App/Views/User/GetAll.cshtml
+++ b/eShop.App/Views/User/GetAll.cshtml
@@ -1,5 +1,201 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<UserViewModel>
+
 @{
+    ViewData["Title"] = "List of Users";
 }
+
+
+<div className="table-responsive mt-5">
+    <table className="table table-striped table-bordered border-dark">
+        <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">UserName</th>
+            <th scope="col">FirstName</th>
+            <th scope="col">LastName</th>
+            <th scope="col">Role</th>
+@*            <th scope="col">Last activity</th>
+            <th scope="col">Status (active or banned (
+                https://demos.pixinvent.com/modern-html-admin-template/html/ltr/vertical-menu-template/page-users-list.html#))</th>*@
+            <th scope="col">Operations</th>
+        </tr>
+        </thead>
+        <tbody>            
+            <div class="row">
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <td scope="row">@item.Id</td>
+                        <td>@item.Username</td>
+                        <td>@item.FirstName</td>
+                        <td>@item.LastName</td>
+                        <td>@item.Role</td>
+                        <td>
+                            <div style="display: flex;">
+                                <a class="btn btn-outline-dark" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit</a>
+
+                                <form asp-action="Delete" asp-route-id="@item.Id" method="post">
+                                    <input type="hidden" name="delete" value="delete" />
+                                    <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </div>
+        </tbody>
+    </table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+@*<div class="card-body" bis_skin_checked="1">
+    <!-- datatable start -->
+    <div class="table-responsive" bis_skin_checked="1">
+        <div id="users-list-datatable_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer" bis_skin_checked="1">
+            <div class="row" bis_skin_checked="1"><div class="col-sm-12 col-md-6" bis_skin_checked="1"><div class="dataTables_length" id="users-list-datatable_length" bis_skin_checked="1"><label>Show <select name="users-list-datatable_length" aria-controls="users-list-datatable" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div></div><div class="col-sm-12 col-md-6" bis_skin_checked="1"><div id="users-list-datatable_filter" class="dataTables_filter" bis_skin_checked="1"><label>Search:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="users-list-datatable"></label></div></div></div><div class="row" bis_skin_checked="1">
+                <div class="col-sm-12" bis_skin_checked="1">
+                    <table id="users-list-datatable" class="table dataTable no-footer" role="grid" aria-describedby="users-list-datatable_info">
+                        <thead>
+                            <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="id: activate to sort column descending" style="width: 66.3906px;">id</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="username: activate to sort column ascending" style="width: 199.203px;">username</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="name: activate to sort column ascending" style="width: 278.344px;">name</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="last activity: activate to sort column ascending" style="width: 209.219px;">last activity</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="verified: activate to sort column ascending" style="width: 150.875px;">verified</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="role: activate to sort column ascending" style="width: 96.4688px;">role</th><th class="sorting" tabindex="0" aria-controls="users-list-datatable" rowspan="1" colspan="1" aria-label="status: activate to sort column ascending" style="width: 130.141px;">status</th><th class="sorting_disabled" rowspan="1" colspan="1" aria-label="edit" style="width: 96.3594px;">edit</th></tr>
+                        </thead>
+                        <tbody>
+                            
+
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">300</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">dean3004</a>
+                                </td>
+                                <td>Dean Stanley</td>
+                                <td>30/04/2019</td>
+                                <td>No</td>
+                                <td>Staff</td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">301</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">zena0604</a>
+                                </td>
+                                <td>Zena Buckley</td>
+                                <td>06/04/2020</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">302</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">delilah0301</a>
+                                </td>
+                                <td>Delilah Moon</td>
+                                <td>03/01/2020</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">303</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">hillary1807</a>
+                                </td>
+                                <td>Hillary Rasmussen</td>
+                                <td>18/07/2019</td>
+                                <td>No</td>
+                                <td>Staff</td>
+                                <td><span class="badge badge-danger">Banned</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">304</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">herman2003</a>
+                                </td>
+                                <td>Herman Tate</td>
+                                <td>20/03/2020</td>
+                                <td>No</td>
+                                <td>Staff</td>
+                                <td><span class="badge badge-danger">Banned</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">305</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">kuame3008</a>
+                                </td>
+                                <td>Kuame Ford</td>
+                                <td>30/08/2019</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">306</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">fulton2009</a>
+                                </td>
+                                <td>Fulton Stafford</td>
+                                <td>20/09/2019</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">307</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">piper0508</a>
+                                </td>
+                                <td>Piper Jordan</td>
+                                <td>05/08/2020</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="odd">
+                                <td class="sorting_1">308</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">neil1002</a>
+                                </td>
+                                <td>Neil Sosa</td>
+                                <td>10/02/2019</td>
+                                <td>No</td>
+                                <td>Staff</td>
+                                <td><span class="badge badge-danger">Banned</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                            <tr role="row" class="even">
+                                <td class="sorting_1">309</td>
+                                <td>
+                                    <a href="../../../html/ltr/vertical-menu-template/page-users-view.html">caldwell2402</a>
+                                </td>
+                                <td>Caldwell Chapman</td>
+                                <td>24/02/2020</td>
+                                <td>Yes</td>
+                                <td>User </td>
+                                <td><span class="badge badge-success">Active</span></td>
+                                <td><a href="../../../html/ltr/vertical-menu-template/page-users-edit.html"><i class="ft-edit-1"></i></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div><div class="row" bis_skin_checked="1"><div class="col-sm-12 col-md-5" bis_skin_checked="1"><div class="dataTables_info" id="users-list-datatable_info" role="status" aria-live="polite" bis_skin_checked="1">Showing 1 to 10 of 36 entries</div></div><div class="col-sm-12 col-md-7" bis_skin_checked="1"><div class="dataTables_paginate paging_simple_numbers" id="users-list-datatable_paginate" bis_skin_checked="1"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="users-list-datatable_previous"><a href="#" aria-controls="users-list-datatable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="users-list-datatable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="users-list-datatable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="users-list-datatable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="users-list-datatable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item next" id="users-list-datatable_next"><a href="#" aria-controls="users-list-datatable" data-dt-idx="5" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
+        </div>
+    </div>
+    <!-- datatable ends -->
+</div>*@
