--- a/eShop.App/Views/Product/Index.cshtml
+++ b/eShop.App/Views/Product/Index.cshtml
@@ -22,7 +22,7 @@
 
                                             <form asp-action="Delete" asp-route-id="@item.Id" method="post">
                                                 <input type="hidden" name="delete" value="delete" />
-                                                <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
+                                                <button type="submit" class="btn btn-outline-danger ms-1"><i class="bi bi-trash"></i> Delete</button>
                                             </form>
                                         </div>
                                     }
