--- a/eShop.App/Views/Product/Index.cshtml
+++ b/eShop.App/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProductViewModel>
 
 @{
-    ViewData["Title"] = "List of Movies";
+    ViewData["Title"] = "List of Products";
 }
 
 <div class="row">
@@ -22,7 +22,7 @@
 
                                             <form asp-action="Delete" asp-route-id="@item.Id" method="post">
                                                 <input type="hidden" name="delete" value="delete" />
-                                                <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash"></i> Delete</button>
+                                                <button type="submit" class="btn btn-outline-danger ms-1"><i class="bi bi-trash"></i> Delete</button>
                                             </form>
                                         </div>
                                     }
@@ -60,4 +60,3 @@
     }
     @await Html.PartialAsync("_CreateItem", "Product")
 </div>
-
